--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^0.18.3",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
